--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,9 +7,8 @@
 		<meta name="description" content="Démo SF">
 		<meta name="author" content="UGA/IUT2/INFO/Philippe Martin">
 		<link rel="icon" href="{{asset('images/favicon.ico')}}">
-		<title>
-			Home
-		</title>
+		{% block title %}
+		{% endblock %}
 		<!-- CSS : Bootstrap, Fontawsome, projet (styles communs à tout le projet) -->
 		<link href="{{ asset('css/bootstrap-4/bootstrap.min.css') }}" rel="stylesheet"/>
 		<link href="{{ asset('css/fontawsome-5.all.min.css') }}" rel="stylesheet"/>
