--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -21,7 +21,7 @@
 				</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="/mi5/en/contact">
+				<a class="nav-link" href="/contact">
 					<i class="fas fa-comments"></i>
 					Contact
 				</a>
