--- a/templates/default/contact.html.twig
+++ b/templates/default/contact.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    <title>Symfony Demo</title>
+    Contact
 {% endblock %}
 
 {% block body %}
@@ -11,7 +11,7 @@
         </div>
         <div class="card-body">
             <div class="card clickable" onclick="window.open('https://www-info.iut2.univ-grenoble-alpes.fr/licence-pro-mi/')">
-                <img src="{{asset('images/iut2_info.png')}}" class="card-img" alt="logo IUT2">
+                <img src={{asset('images/iut2_info.png')}} class="card-img" alt="logo IUT2">
                 <div class="card-body">
                     <h1 class="card-title"><i class="fas fa-code"></i> Licence Pro MI AW</h1>
                     <h2 class="card-title"><i class="fab fa-symfony"></i> Module MI5</h2>
