modification du code : supression des lien mi5 et "" pour les asset

--- a/templates/boutique/index.html.twig
+++ b/templates/boutique/index.html.twig
@@ -17,7 +17,7 @@
 			<div class="col-md-3">
 
 				<div class="card clickable" onclick="location = 'boutique/rayon/{{category.id}}'">
-					<img src="{{asset(category.visuel)}}" class="card-img-top" alt="Fruits">
+					<img src={{asset(category.visuel)}} class="card-img-top" alt="Fruits">
 					<div class="card-body">
 						<h4 class="card-title">{{category.libelle}}</h4>
 						<p class="card-text">
