--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-	<a class="navbar-brand" href="/mi5/en">
+	<a class="navbar-brand" href="">
 		<i class="fas fa-home"></i>
 		SF Demo
 	</a>
@@ -9,19 +9,19 @@
 	<div class="collapse navbar-collapse" id="navbarsExampleDefault">
 		<ul class="navbar-nav mr-auto">
 			<li class="nav-item">
-				<a class="nav-link" href="/mi5/en/boutique">
+				<a class="nav-link" href="boutique">
 					<i class="fas fa-store"></i>
 					Store
 				</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="/mi5/en/panier">
+				<a class="nav-link" href="panier">
 					<i class="fas fa-shopping-cart"></i>
 					0 Item(s)
 				</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="/contact">
+				<a class="nav-link" href="contact">
 					<i class="fas fa-comments"></i>
 					Contact
 				</a>
@@ -32,16 +32,16 @@
 					Sign In
 				</span>
 				<div class="dropdown-menu" aria-labelledby="dropdown01">
-					<a class="dropdown-item " href="/mi5/en/login">
+					<a class="dropdown-item " href="login">
 						Sign In/Register
 					</a>
-					<a class="dropdown-item disabled" href="/mi5/en/usager/compte">
+					<a class="dropdown-item disabled" href="usager/compte">
 						My Account
 					</a>
-					<a class="dropdown-item disabled" href="/mi5/en/usager/commandes">
+					<a class="dropdown-item disabled" href="usager/commandes">
 						My Orders
 					</a>
-					<a class="dropdown-item disabled" href="/mi5/en/logout">
+					<a class="dropdown-item disabled" href="logout">
 						Logout
 					</a>
 				</div>
@@ -65,19 +65,19 @@
 					EUR
 				</span>
 				<div class="dropdown-menu" aria-labelledby="dropdown02" style="min-width: 5rem;">
-					<a class="dropdown-item" href="/mi5/en/changer_monnaie/CAD/boutique_index/%7B%22_locale%22:%22en%22%7D">
+					<a class="dropdown-item" href="changer_monnaie/CAD/boutique_index/%7B%22_locale%22:%22en%22%7D">
 						CAD
 					</a>
-					<a class="dropdown-item" href="/mi5/en/changer_monnaie/USD/boutique_index/%7B%22_locale%22:%22en%22%7D">
+					<a class="dropdown-item" href="changer_monnaie/USD/boutique_index/%7B%22_locale%22:%22en%22%7D">
 						USD
 					</a>
-					<a class="dropdown-item" href="/mi5/en/changer_monnaie/GBP/boutique_index/%7B%22_locale%22:%22en%22%7D">
+					<a class="dropdown-item" href="changer_monnaie/GBP/boutique_index/%7B%22_locale%22:%22en%22%7D">
 						GBP
 					</a>
-					<a class="dropdown-item" href="/mi5/en/changer_monnaie/PHP/boutique_index/%7B%22_locale%22:%22en%22%7D">
+					<a class="dropdown-item" href="changer_monnaie/PHP/boutique_index/%7B%22_locale%22:%22en%22%7D">
 						PHP
 					</a>
-					<a class="dropdown-item" href="/mi5/en/changer_monnaie/IDR/boutique_index/%7B%22_locale%22:%22en%22%7D">
+					<a class="dropdown-item" href="changer_monnaie/IDR/boutique_index/%7B%22_locale%22:%22en%22%7D">
 						IDR
 					</a>
 				</div>
@@ -86,11 +86,11 @@
 		<ul class="navbar-nav my-0">
 			<li class="nav-item dropdown">
 				<span class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					<img src="{{asset('images/locale/en.png')}}" alt="En">
+					<img src={{asset('images/locale/en.png')}} alt="En">
 				</span>
 				<div class="dropdown-menu" aria-labelledby="dropdown03" style="min-width: 5rem;">
 					<a class="dropdown-item" href="/mi5/fr/boutique">
-						<img src="{{asset('images/locale/fr.png')}}" alt="Fr">
+						<img src={{asset('images/locale/fr.png')}} alt="Fr">
 					</a>
 				</div>
 			</li>
