--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -89,7 +89,7 @@
 					<img src={{asset('images/locale/en.png')}} alt="En">
 				</span>
 				<div class="dropdown-menu" aria-labelledby="dropdown03" style="min-width: 5rem;">
-					<a class="dropdown-item" href="/mi5/fr/boutique">
+					<a class="dropdown-item" href="boutique">
 						<img src={{asset('images/locale/fr.png')}} alt="Fr">
 					</a>
 				</div>
