modification gitignore et base.html.twig block title

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,8 +8,9 @@
 		<meta name="author" content="UGA/IUT2/INFO/Philippe Martin">
 		<link rel="icon" href={{asset('images/favicon.ico')}}>
 		<title>
-		{% block title %}
-		{% endblock %}
+			{% block title %}
+				Boutique Symfony
+			{% endblock %}
 		</title>
 		<!-- CSS : Bootstrap, Fontawsome, projet (styles communs à tout le projet) -->
 		<link href={{ asset('css/bootstrap-4/bootstrap.min.css') }} rel="stylesheet"/>
