Ajout des balises twig trans

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,7 +9,7 @@
 		<link rel="icon" href={{asset('images/favicon.ico')}}>
 		<title>
 			{% block title %}
-				Boutique Symfony
+				{% trans %} base.title {% endtrans %}
 			{% endblock %}
 		</title>
 		<!-- CSS : Bootstrap, Fontawsome, projet (styles communs à tout le projet) -->
