--- a/templates/default/contact.html.twig
+++ b/templates/default/contact.html.twig
@@ -1,21 +1,21 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    Contact
+    {% trans %} default.contact.title {% endtrans %}
 {% endblock %}
 
 {% block body %}
      <div class="card col-md-6 offset-3">
         <div class="card-header">
-            <h1><i class="fas fa-comments"></i> Contact</h1>
+            <h1><i class="fas fa-comments"></i> {% trans %} default.contact.title {% endtrans %} </h1>
         </div>
         <div class="card-body">
             <div class="card clickable" onclick="window.open('https://www-info.iut2.univ-grenoble-alpes.fr/licence-pro-mi/')">
                 <img src={{asset('images/iut2_info.png')}} class="card-img" alt="logo IUT2">
                 <div class="card-body">
-                    <h1 class="card-title"><i class="fas fa-code"></i> Licence Pro MI AW</h1>
-                    <h2 class="card-title"><i class="fab fa-symfony"></i> Module MI5</h2>
-                    <p><i class="far fa-copyright"></i> Ph. Martin, 2019/20</p>
+                    <h1 class="card-title"><i class="fas fa-code"></i> {% trans %} default.contact.formation {% endtrans %} </h1>
+                    <h2 class="card-title"><i class="fab fa-symfony"></i> {% trans %} default.contact.module {% endtrans %} </h2>
+                    <p><i class="far fa-copyright"></i> {%  trans %} default.contact.professor {%  endtrans %} </p>
                 </div>
             </div>
         </div>
