--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -1,19 +1,19 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-   Symfony Demo
+    {% trans %} default.index.title {% endtrans %}
 {% endblock %}
 
 {% block body %}
     <div class="card col-md-12">
         <div class="card-header">
-            <h1><i class="fas fa-home"></i>Symfony Demo</h1>
+            <h1><i class="fas fa-home"></i> {% trans %} default.index.title {% endtrans %} </h1>
         </div>
         <div class="card-body">
             <div class="card clickable" onclick="location = 'boutique'">
                 <img src={{asset('images/epicerie.jpg')}} class="card-img-top" alt="Logo Boutique Symfony"/>
                 <div class="card-body">
-                    <p class="card-text"><i>We don't sell anything, we just want to learn</i></p>
+                    <p class="card-text"><i> {% trans %} default.index.message {% endtrans %} </i></p>
                 </div>
             </div>
         </div>
