Ajout des balises twig trans et ajout de '' pour les asset et path twig

--- a/templates/default/contact.html.twig
+++ b/templates/default/contact.html.twig
@@ -11,10 +11,10 @@
         </div>
         <div class="card-body">
             <div class="card clickable" onclick="window.open('https://www-info.iut2.univ-grenoble-alpes.fr/licence-pro-mi/')">
-                <img src={{asset('images/iut2_info.png')}} class="card-img" alt="logo IUT2">
+                <img src='{{asset('images/iut2_info.png')}}' class="card-img" alt="logo IUT2">
                 <div class="card-body">
                     <h1 class="card-title"><i class="fas fa-code"></i> {% trans %} default.contact.formation {% endtrans %} </h1>
-                    <h2 class="card-title"><i class="fab fa-symfony"></i> {% trans %} default.contact.module {% endtrans %} </h2>
+                    <h2 class="card-title"><i class="fab fa-symfony"></i> {% trans %} default.contact.ressource {% endtrans %} </h2>
                     <p><i class="far fa-copyright"></i> {%  trans %} default.contact.professor {%  endtrans %} </p>
                 </div>
             </div>
