--- a/templates/boutique/index.html.twig
+++ b/templates/boutique/index.html.twig
@@ -9,14 +9,16 @@
 		<div class="card-header">
 			<h1>
 				<i class="fas fa-store"></i>
-				{% trans %} boutique.index.nbCategoryMessage {% endtrans %}
+				{% trans with {
+					'nbCategory': categories|length
+				}%} boutique.index.nbCategoryMessage {% endtrans %}
 			</h1>
 		</div>
         <div class="card-body row">
         {% for category in categories %}
 			<div class="col-md-3">
-				<div class="card clickable" onclick="location = 'boutique/rayon/{{category.id}}'">
-					<img src={{asset(category.visuel)}} class="card-img-top" alt="Fruits">
+				<div class="card clickable" onclick="location = '{{ path('app_boutique_rayon', {'idCategorie': category.id}) }}'">
+					<img src='{{asset(category.visuel)}}' class="card-img-top" alt="Fruits">
 					<div class="card-body">
 						<h4 class="card-title">{{category.libelle}}</h4>
 						<p class="card-text">
