--- a/templates/boutique/rayon.html.twig
+++ b/templates/boutique/rayon.html.twig
@@ -1,19 +1,24 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	{% trans %} boutique.rayon.title {% endtrans %}
+	{% trans with {
+			'categoryLabel': category.libelle
+		} %} boutique.rayon.title {% endtrans %}
 {% endblock %}
 
 {% block body %}
 	<div class="card col-md-12">
 		<div class="card-header">
-			<h1><i class="fas fa-store"></i>{% trans %} boutique.rayon.nbArticleMessage {% endtrans %} </h1>
+			<h1><i class="fas fa-store"></i> {% trans with {
+					'categoryLabel': category.libelle,
+					'nbArticle': products | length
+				} %} boutique.rayon.nbArticleMessage {% endtrans %} </h1>
 		</div>
 		<div class="card-body row">
         {% for product in products %}
 			<div class="col-md-4">
 				<div class="card clickable" onclick="location = 'panier/ajouter/7'">
-					<img src={{asset(product.visuel)}} class="card-img-produit" alt="Nutella">
+					<img src='{{asset(product.visuel)}}' class="card-img-produit" alt="Nutella">
 					<div class="card-body">
 						<h4 class="card-title">{{product.libelle}}</h4>
 						<p class="card-text">
