--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-	<a class="navbar-brand" href="">
+	<a class="navbar-brand" href='{{ path('index') }}'>
 		<i class="fas fa-home"></i>
-		SF Demo
+		{% trans %} navbar.home {% endtrans %}
 	</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
@@ -9,7 +9,7 @@
 	<div class="collapse navbar-collapse" id="navbarsExampleDefault">
 		<ul class="navbar-nav mr-auto">
 			<li class="nav-item">
-				<a class="nav-link" href="boutique">
+				<a class="nav-link" href='{{ path('app_boutique') }}'>
 					<i class="fas fa-store"></i>
 					{% trans %} navbar.store {% endtrans %}
 				</a>
@@ -21,7 +21,7 @@
 				</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="contact">
+				<a class="nav-link" href='{{ path('contact') }}'>
 					<i class="fas fa-comments"></i>
 					{% trans %} navbar.contact {% endtrans %}
 				</a>
@@ -54,7 +54,7 @@
 			</li>
 		</ul>
 		<form class="form-inline my-2 my-lg-0">
-			<input class="form-control mr-sm-2" id="searchString" type="text" placeholder="Search Items..." aria-label="Search">
+			<input class="form-control mr-sm-2" id="searchString" type="text" placeholder="{% trans %} navbar.search {% endtrans %}" aria-label="Search">
 			<button class="btn btn-secondary my-2 my-sm-0" id="searchButton">
 				<i class="fas fa-search"></i>
 			</button>
@@ -86,11 +86,11 @@
 		<ul class="navbar-nav my-0">
 			<li class="nav-item dropdown">
 				<span class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					<img src={{asset('images/locale/en.png')}} alt="En">
+					<img src='{{asset('images/locale/en.png')}}' alt="En">
 				</span>
 				<div class="dropdown-menu" aria-labelledby="dropdown03" style="min-width: 5rem;">
 					<a class="dropdown-item" href="boutique">
-						<img src={{asset('images/locale/fr.png')}} alt="Fr">
+						<img src='{{asset('images/locale/fr.png')}}' alt="Fr">
 					</a>
 				</div>
 			</li>
