--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -84,14 +84,24 @@
 			</li>
 		</ul>
 		<ul class="navbar-nav my-0">
+			{% set locale = app.request.attributes.get('_locale') %}
 			<li class="nav-item dropdown">
 				<span class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					<img src='{{asset('images/locale/en.png')}}' alt="En">
+					<img src="{{asset('images/locale/'~locale~'.png')}}" alt="{{locale}}">
 				</span>
 				<div class="dropdown-menu" aria-labelledby="dropdown03" style="min-width: 5rem;">
-					<a class="dropdown-item" href="boutique">
-						<img src='{{asset('images/locale/fr.png')}}' alt="Fr">
-					</a>
+					{% for uneLocale in supported_locales | split('|') %}
+						{% if uneLocale != locale %}
+
+							{% set route = app.request.attributes.get('_route') %}
+							{% set route_params = app.request.attributes.get('_route_params') %}
+							{% set route_params = route_params | merge({'_locale': uneLocale}) %}
+
+							<a class="dropdown-item" href="{{ path(route, route_params) }}">
+								<img src="{{asset('images/locale/'~uneLocale~'.png')}}" alt="{{uneLocale}}">
+							</a>
+						{% endif %}
+					{% endfor %}
 				</div>
 			</li>
 		</ul>
