--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -15,7 +15,7 @@
 				</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="panier">
+				<a class="nav-link" href="{{ path('app_panier_index') }}">
 					<i class="fas fa-shopping-cart"></i>
 					{% trans %} navbar.shoppingCart {% endtrans %}
 				</a>
