--- a/templates/boutique/rayon.html.twig
+++ b/templates/boutique/rayon.html.twig
@@ -17,7 +17,9 @@
 		<div class="card-body row">
         {% for product in products %}
 			<div class="col-md-4">
-				<div class="card clickable" onclick="location = 'panier/ajouter/7'">
+				<div class="card clickable" onclick="location = '{{ path('app_panier_ajouter', {
+																		'idProduct':product.idCategorie,
+																		'quantity':1}) }}'">
 					<img src='{{asset(product.visuel)}}' class="card-img-produit" alt="Nutella">
 					<div class="card-body">
 						<h4 class="card-title">{{product.libelle}}</h4>
