navBar dynamique : nbr article dans le panier affiché

--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -17,7 +17,9 @@
 			<li class="nav-item">
 				<a class="nav-link" href="{{ path('app_panier_index') }}">
 					<i class="fas fa-shopping-cart"></i>
-					{% trans %} navbar.shoppingCart {% endtrans %}
+					{% trans with {
+						'nbProduits': render(controller('App\\Controller\\PanierController::nombreProduits'))
+					}%} navbar.shoppingCart {% endtrans %}
 				</a>
 			</li>
 			<li class="nav-item">
