--- a/templates/boutique/rayon.html.twig
+++ b/templates/boutique/rayon.html.twig
@@ -18,7 +18,7 @@
         {% for product in products %}
 			<div class="col-md-4">
 				<div class="card clickable" onclick="location = '{{ path('app_panier_ajouter', {
-																		'idProduct':product.idCategorie,
+																		'idProduct':product.id,
 																		'quantity':1}) }}'">
 					<img src='{{asset(product.visuel)}}' class="card-img-produit" alt="Nutella">
 					<div class="card-body">
