--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -10,14 +10,17 @@
 
     {% if app.user %}
         <div class="mb-3">
-            You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
+            {% trans with {
+                'userIdentifier': app.user.userIdentifier
+            } %} security.login.loggedInAs {% endtrans %}
+            <a href="{{ path('app_logout') }}"> {% trans %} security.login.logout {% endtrans %} </a>
         </div>
     {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+    <h1 class="h3 mb-3 font-weight-normal">{% trans %} security.login.pleaseSignIn {% endtrans %}</h1>
     <label for="inputEmail">Email</label>
     <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    <label for="inputPassword">Password</label>
+    <label for="inputPassword">{% trans %} security.login.passwordLabel {% endtrans %}</label>
     <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
 
     <input type="hidden" name="_csrf_token"
@@ -36,7 +39,7 @@
     #}
 
     <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
+        {% trans %} security.login.signIn {% endtrans %}
     </button>
 </form>
 {% endblock %}
